# fs-sim

./: .gitignore  .stylish-haskell.yaml  CONTRIBUTING.md  README.md  RELEASE_PROCESS.md  SECURITY.md  cabal.project  cabal.project.debug
.github/: dependabot.yml
.github/workflows/: documentation.yml  haskell.yml
fs-api/: CHANGELOG.md  README.md  cardano-fs-api.cabal  fs-api.cabal
fs-api/bench/: Main.hs
fs-api/src-linux/System/FS/IO/Internal/: Error.hs
fs-api/src-macos/System/FS/IO/Internal/: Error.hs
fs-api/src-unix/System/FS/IO/: Internal.hs  Unix.hs
fs-api/src-unix/System/IO/: FS.hs
fs-api/src-win32/System/FS/IO/: Internal.hs  Windows.hs
fs-api/src-win32/System/IO/: FS.hs
fs-api/src/System/FS/: API.hs  CRC.hs  CallStack.hs  Condense.hs  IO.hs
fs-api/src/System/FS/API/: Lazy.hs  Strict.hs  Types.hs
fs-api/src/System/FS/IO/: Handle.hs
fs-api/src/System/FS/IO/Internal/: Handle.hs
fs-api/src/Util/: CallStack.hs
fs-api/test/: Main.hs
fs-api/test/Test/System/FS/: IO.hs
fs-api/test/Test/System/FS/API/: FsPath.hs
fs-sim/: CHANGELOG.md  README.md  cardano-fs-sim.cabal  fs-sim.cabal
fs-sim/src/System/FS/Sim/: Error.hs  FsTree.hs  MockFS.hs  Prim.hs  Pure.hs  STM.hs  Stream.hs
fs-sim/test/: Main.hs
fs-sim/test/Test/: Util.hs
fs-sim/test/Test/System/FS/: StateMachine.hs
fs-sim/test/Test/System/FS/Sim/: Error.hs  FsTree.hs  Stream.hs
fs-sim/test/Test/Util/: RefEnv.hs  WithEntryCounter.hs
scripts/: check-cabal.sh  format-fourmolu.sh  haddocks.sh
