cabal-version:   3.0
name:            fs-api
version:         0.2.0.1
synopsis:        API for file systems
description:     API for file systems.
license:         Apache-2.0
license-files:
  LICENSE
  NOTICE

copyright:       2019-2024 Input Output Global Inc (IOG)
author:          IOG Engineering Team
maintainer:      operations@iohk.io, Joris Dral (joris@well-typed.com)
category:        System
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==8.10 || ==9.2 || ==9.4 || ==9.6 || ==9.8

source-repository head
  type:     git
  location: https://github.com/input-output-hk/fs-sim
  subdir:   fs-api

library
  hs-source-dirs:   src
  exposed-modules:
    System.FS.API
    System.FS.API.Lazy
    System.FS.API.Strict
    System.FS.API.Types
    System.FS.CallStack
    System.FS.Condense
    System.FS.CRC
    System.FS.IO
    System.FS.IO.Internal
    System.FS.IO.Internal.Handle

  default-language: Haskell2010
  build-depends:
    , base        >=4.14 && <4.20
    , bytestring  >=0.10 && <0.13
    , containers  >=0.5  && <0.7
    , deepseq
    , digest
    , directory   >=1.3  && <1.4
    , filepath    >=1.4  && <1.5
    , io-classes  >=0.3  && <1.5
    , primitive   ^>=0.9
    , text        >=1.2  && <2.2

  if os(windows)
    hs-source-dirs: src-win32
    build-depends:  Win32 >=2.6.1.0

  else
    hs-source-dirs:  src-unix
    build-depends:
      , unix
      , unix-bytestring  >=0.4.0

    exposed-modules: System.FS.IO.Internal.Error

    if os(linux)
      hs-source-dirs: src-linux

    else
      hs-source-dirs: src-macos

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wpartial-fields -Widentities
    -Wredundant-constraints -Wmissing-export-lists -Wunused-packages

test-suite fs-api-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:    Test.System.FS.IO
  default-language: Haskell2010
  build-depends:
    , base
    , bytestring
    , fs-api
    , primitive
    , tasty
    , tasty-quickcheck
    , temporary

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wpartial-fields -Widentities
    -Wredundant-constraints -Wmissing-export-lists -Wunused-packages
    -fno-ignore-asserts
